Set the tab title to include the subdomain

--- a/server/templates/ui.html
+++ b/server/templates/ui.html
@@ -36,6 +36,9 @@
    <script type="text/javascript">
      complete = ALLFUNCTIONS;
      elmapp = Elm.Main.fullscreen({editorState: null, complete: complete});
+
+     document.title = window.location.hostname.split('.')[0] + " - Dark";
+
     </script>
   </body>
 </html>
