--- a/server/static/base.less
+++ b/server/static/base.less
@@ -20,7 +20,9 @@ html {
 @purple: #ba8baf;
 @brown : #a16946;
 
+@selected-background: lighten(@black1, 5%);
 @top-border: lighten(@black1, 5%) 2px dotted;
+@blank-underline: 1px dashed @grey2;
 
 body {
   font-family: 'Fira Mono', monospace;
@@ -76,7 +78,7 @@ body {
   padding: 4px;
 
   &.selected {
-    background-color: lighten(@black1, 5%);
+    background-color: @selected-background;
     outline: 0.4px darken(magenta, 25%) dotted;
   }
 
@@ -88,9 +90,9 @@ body {
     color: @grey1;
     font-style: italic;
     font-size: 8pt;
-    min-width: 60px;
+    min-width: 8ch;
     height: 15px;
-    border-bottom: 1px dashed @grey2;
+    border-bottom: @blank-underline;
     text-indent: 4px;
   }
 
@@ -386,7 +388,9 @@ body {
   cursor: default;
   font-size: 14px;
   background: @black2;
-  width: 96px; // keeps autocomplete appearing when Creating
+  width: auto;
+  min-width: 6ch;
+  /* width: 96px; // keeps autocomplete appearing when Creating */
 
   .types {
     float: right;
@@ -403,21 +407,23 @@ body {
     #search-container {
       position: relative;
       input {
-        width: 96px;
+        font-family: 'Fira Mono', monospace;
+        min-width: 6ch;
       }
       #entryBox {
+        min-width: 6ch;
         z-index: 20;
-        width: 96px;
         position: relative;
-        color: black;
+        color: @grey3;
         background: transparent;
+        border-bottom: @blank-underline;
       }
       #suggestionBox {
+        min-width: 6ch;
         position: absolute;
         top: 0;
         left: 0;
-        color: @grey3;
-        background: @white1;
+        background: @selected-background;
       }
     }
   }
