--- a/server/static/base.less
+++ b/server/static/base.less
@@ -25,7 +25,6 @@ html {
 @blank-underline: 1px dashed @grey2;
 
 body {
-  font-family: 'Fira Mono', monospace;
   margin: 0;
   padding: 0;
   height: 100%;
@@ -48,6 +47,10 @@ body {
         -ms-user-select: none; /* Internet Explorer/Edge */
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
+}
+
+body #grid * {
+  font-family: 'Fira Code', monospace;
 }
 
 #buttons {
@@ -255,7 +258,6 @@ body {
 //*************
 .ast {
   font-size: 10pt;
-  font-family: 'Fira Code', monospace;
   padding: 8px;
   white-space: pre;
   width: max-content;
@@ -386,7 +388,6 @@ body {
   // the headers, and position:relative allows us to do it.
   position: relative;
   cursor: default;
-  font-size: 14px;
   background: @black2;
   width: auto;
   /* width: 96px; // keeps autocomplete appearing when Creating */
@@ -401,13 +402,10 @@ body {
     // makes the form takes up no space in the DOM, meaning we don't
     // expand the top-level
     position: absolute;
-    margin-top: -15px; // account for the space of both input boxes
+    margin-top: -12px; // account for the space of both input boxes
 
     #search-container {
       position: relative;
-      input {
-        font-family: 'Fira Mono', monospace;
-      }
       #entryBox {
         z-index: 20;
         position: relative;
