Old move from hole->blank

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -182,7 +182,7 @@ body #grid * {
     .name, .type {
       margin: 2px 5px;
       flex: 1 0 0;
-      .hole {
+      .blank {
         width: 96px; // put it all on one line
       }
     }
