Remove dotted line from link

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -217,6 +217,10 @@ body #grid * {
     width: 80px;
   }
 
+  // remove dotted outline after clicking (source: reset-normalize)
+  a:focus {
+    outline: none;
+  }
   .external {
     color: @orange;
     float: right;
