Fix the size of the .external link

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -241,7 +241,7 @@ body #grid * {
     outline: none;
   }
   .external {
-    font-size: 200%;
+    /* font-size: 200%; */
     padding-right: 1ch;
     color: @orange;
     vertical-align: center;
