--- a/server/templates/ui.html
+++ b/server/templates/ui.html
@@ -18,6 +18,9 @@
           type="text/css"
           href="/static/base.css" />
 
+    <!-- prevent favicon requests for now -->
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+
     <script type="text/javascript">
       function stopKeys(event) {
         if (event.keyCode == 9 || event.keyCode == 32) { // Tab + Space
