Fix display of nested threads (css rule was matching all pipes in the first child of a thread, rather than the immediate subchild).
Also make them prettier (ish - there's only so much I can do here)

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -409,10 +409,15 @@ body #grid * {
     .threadmember {
       .layout-block;
 
-      &:first-child {
-        .thread.pipe {
-          display: none;
-        }
+      &:first-child > .thread.pipe {
+        display: none;
+      }
+
+      .thread.pipe {
+        margin-top: 1px;
+        margin-right: 0px;
+        font-size: 70%;
+        color: @blue;
       }
     }
   }
