Add `emit` function that does nothing

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -478,6 +478,7 @@ body #grid * {
   position: relative;
   cursor: default;
   background: @black2;
+  color: @white3;
   width: auto;
   /* width: 96px; // keeps autocomplete appearing when Creating */
 
