Add 'module_' to Handlers, and add it to the spec

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -238,8 +238,7 @@ body #grid * {
   }
 
   .module {
-    padding-left: 1ch;
-    width: 4ch; // width of "HTTP"
+    padding-left: 10px;
     padding-right: 1ch;
   }
 
