Show a flag when you've selected a blank

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -599,3 +599,15 @@ body #grid * {
     }
   }
 }
+
+// ---------------------------
+// Feature-flags
+// ---------------------------
+.sidebar-box {
+  position: relative;
+}
+
+.feature-flag {
+  position: absolute;
+  right: 5px;
+}
