Add a comment about vthe sidebar flag's positioning. Tidy up location a bit

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -630,11 +630,14 @@ body #grid * {
 // ---------------------------
 // Feature-flags
 // ---------------------------
+
+// This creates an ancestor for .feature-flag to be absolute positioned
+// against.
 .sidebar-box {
   position: relative;
 }
 
 .feature-flag {
   position: absolute;
-  right: 5px;
+  right: -16px;
 }
