Make space for feature flags in the html

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -642,7 +642,22 @@ body #grid * {
   position: relative;
 }
 
-.feature-flag {
-  position: absolute;
-  right: -16px;
+.feature-flag-container {
+  .feature-flag {
+    position: absolute;
+    right: -16px;
+  }
+  .flagged {
+    .flag-message {
+    }
+    .flag-setting {
+    }
+    .flag-left {
+      background-color: red;
+    }
+    .flag-right {
+      background-color: green;
+    }
+  }
 }
+
