Comment out spec-types

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -613,6 +613,7 @@ body #grid * {
 // ---------------------------
 // Types
 // ---------------------------
+/*
 .spec-type {
   .blank-text-style;
   padding: 8px;
@@ -631,6 +632,7 @@ body #grid * {
     }
   }
 }
+*/
 
 // ---------------------------
 // Feature-flags
