Start displaying feature flag

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -648,15 +648,29 @@ body #grid * {
 
 }
 .flagged {
+  .hidden {
+    background-color: blue;
+  }
   .flag-message {
+    position: absolute;
+    left: 100%;
   }
   .flag-setting {
+    position: absolute;
+    left: 100%;
   }
   .flag-left {
     background-color: red;
+    position: absolute;
+    left: 100%;
+    margin-top: -50px;
   }
   .flag-right {
     background-color: green;
+    position: absolute;
+    left: 100%;
+    margin-top: 50px;
+
   }
 }
 
