Don't allow nested feature flags

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -648,6 +648,10 @@ body #grid * {
 
 }
 .flagged {
+
+  .feature-flag {
+    display: none;
+  }
   .hidden {
     background-color: blue;
   }
@@ -660,13 +664,11 @@ body #grid * {
     left: 100%;
   }
   .flag-left {
-    background-color: red;
     position: absolute;
     left: 100%;
     margin-top: -50px;
   }
   .flag-right {
-    background-color: green;
     position: absolute;
     left: 100%;
     margin-top: 50px;
