Show the message so it doesnt overlap with the int setting

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -657,7 +657,7 @@ body #grid * {
   }
   .flag-message {
     position: absolute;
-    left: 100%;
+    left: 100% + 10px;
   }
   .flag-setting {
     position: absolute;
