--- a/server/static/base.less
+++ b/server/static/base.less
@@ -649,9 +649,11 @@ body #grid * {
 }
 .flagged {
 
-  .feature-flag {
-    display: none;
+  .fa-flag {
+    color: red;
+    font-size: 8px;
   }
+
   .hidden {
     background-color: blue;
   }
@@ -663,16 +665,21 @@ body #grid * {
     position: absolute;
     left: 100%;
   }
-  .flag-left {
-    position: absolute;
-    left: 100%;
-    margin-top: -50px;
-  }
-  .flag-right {
-    position: absolute;
-    left: 100%;
-    margin-top: 50px;
+  .nested-flag {
 
+    position: absolute;
+    left: 100%;
+
+    &.flag-left {
+      margin-top: -50px;
+    }
+    &.flag-right {
+      margin-top: 50px;
+    }
+    .feature-flag {
+      display: none;
+    }
   }
+
 }
 
