Rename the spec's "header" class to "spec-header"

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -258,8 +258,7 @@ body #grid * {
 // Handler
 //*************
 
-// header
-.toplevel .header {
+.toplevel .spec-header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
