Show text when mousing over

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -141,8 +141,7 @@ body #grid * {
 
   .mouseovered {
     background-color: @grey1;
-
-    .blank {
+    &.blank {
       color: @grey3;
     }
   }
