Add working if badly-performing slider

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -634,6 +634,12 @@ body #grid * {
     font-size: 8px;
   }
 
+  .setting-slider {
+    position: absolute;
+    left: 110%;
+    margin-top: -10px;
+  }
+
   .hidden {
     background-color: blue;
   }
