Add button to execute function

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -400,6 +400,12 @@ body #grid * {
     color: @green;
   }
 
+  .execution-button {
+    color: red;
+    font-size: 60%;
+    margin-left: -4px;
+  }
+
   .precedence-1 {
     &,
     & .entry form #search-container #suggestionBox,
