Add Function navigation

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -654,8 +654,13 @@ body #grid * {
   position: absolute;
   right: -16px;
   .default;
-
 }
+
+.edit-fn {
+  position: absolute;
+  .default;
+}
+
 .flagged {
 
   .fa-flag {
