bounce request cursor element up some to fit selected live value when active.

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -161,6 +161,9 @@ body #grid * {
     left: 0px;
     position: absolute;
     width: 100%;
+    &.live-view-selection-active {
+      bottom: calc(~"100% + 22px");
+    }
     ul.request-cursor {
       bottom: 1em;
       float: left;
