added support for importing and integrating npm packages.

--- a/server/templates/ui.html
+++ b/server/templates/ui.html
@@ -32,6 +32,7 @@
 
       }
     </script>
+    <script type="text/javascript" src="/static/bundle.js"> </script>
     <script type="text/javascript" src="/static/elm.js"> </script>
 
   </head>
