Add a little line below the spec-handler for the craic

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -296,6 +296,9 @@ body #grid * {
   color: @orange;
   font-size: 8pt;
 
+  border-bottom: 1px solid @orange;
+  padding-bottom: 4px;
+
   .name, .modifier, .module {
     margin: 0 4px;
   }
