Add live-updating of related variable bindings

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -407,6 +407,10 @@ body #grid * {
     .string-style;
   }
 
+  .related-change {
+    color: @yellow;
+  }
+
   .lambdabody {
     .layout-block;
   }
