--- a/server/static/base.less
+++ b/server/static/base.less
@@ -189,6 +189,7 @@ body #grid * {
             position: absolute;
             width: auto;
             word-wrap: break-word;
+            white-space: pre;
           }
         }
         &.active {
