Separate the slider and the msg. Put the msg on top

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -785,12 +785,13 @@ body #grid * {
     background-color: blue;
   }
   .flag-message {
+    margin-top: -10px;
     position: absolute;
     left: 100% + 10px;
   }
-  .flag-setting {
+  .setting-slider {
+    margin-top: 30px;
     position: absolute;
-    left: 100%;
   }
   .feature-flag {
     display: none;
