pop nodes up when dragging.

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -724,6 +724,10 @@ body #grid * {
 .sidebar-box {
   position: relative;
   z-index: 10;
+  &.dragging {
+    z-index: 30;
+
+  }
 }
 
 .selected[title] {
