remove css hacks from input.

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -624,12 +624,10 @@ body #grid * {
       #entry-box {
         // as much like the blank box as possible
         background: transparent;
-        color: transparent;
-        direction: rtl;
+        color: @grey3;
         padding-right: 1ch;
         position: relative;
         text-align: left;
-        text-shadow: 0 0 0 @grey3;
         vertical-align: baseline;
         width: 100%;
         z-index: 20;
